<resources>
    <string name="app_name">SpaceContact</string>
    <string name="login">Iniciar</string>
    <string name="user">"Usuario"</string>
    <string name="password">********</string>
    <string name="email">Correo</string>
    <string name="etPassword">Contraseña</string>
    <string name="btLog">Iniciar</string>
    <string name="btReg">Registrar</string>
    <string name="btConf">Confirmar</string>
    <string name="btBack">Atras</string>
    <string name="btStrNext">Siguente</string>
    <string name="btConfirm">Conectar</string>
    <string name="menuSpa">Español</string>
    <string name="menuEng">Ingles</string>
    <string name="menuMute">Silenciar</string>
    <string name="menuUnmute">Sonido</string>
    <string name="fatigeChar">Fatiga</string>
    <string name="hungerChar">Hambre</string>
    <string name="turnsChar">Turnos</string>
    <string name="newGamer">Partida Nueva</string>
    <string name="contGame">Continuar</string>
    <string name="editChar">Editar Piloto</string>
    <string name="menuContact">Contactar</string>
    <string name="menuLogOff">Desconectar</string>
    <string name="menuExit">Salir</string>
    <string name="menuBackMenu">Menu Principal</string>
    <string name="alertYes">Si</string>
    <string name="alertNo">No</string>
    <string name="alertTitle">Saliendo del juego</string>
    <string name="alertMsg">Estas saliendo del juego, ¿Estás seguro de salir?</string>
    <string name="alertTitlePerm">Permisos necesarios</string>
    <string name="alertMsgPerm">Si quieres llamarnos tendrás que activar los permisos en Ajustes del Telefono -> Apps -> SpaceContact -> Permisos y activar permisos de LLamada.</string>
    <string name="descFail">"Somos un equipo de estudiantes que está desarrollando un videojuego como proyecto en base Kotlin y Java usando AndroidStudio, similar a Faster Than Light.</string>
    <string name="contactInfo">Sobre nosotros</string>
    <string name="notMatchTitle">Tu password no coincide.</string>
    <string name="passNotMatch">La contraseña tiene que ser igual en ambos campos, asegurate de escribirla bien.</string>
    <string name="alertNoEmailTitle">"Campo email es obligatorio.</string>
    <string name="alertEmailMsg">No puedes dejar el campo email en blanco.</string>
    <string name="weaponsAdapt">Armas</string>
    <string name="statsAdapt">Estadisticas</string>
    <string name="userCreated">"Usuario creado con exito."</string>
    <string name="noEmailWritted">El campo Email no puede estar vacio.</string>
    <string name="noPassWritted">El campo Password no puede estar vacio.</string>
    <string name="noBothFields">El campo Password y Email son obligatorios.</string>
    <string name="welcomeMsg">Bienvenido de nuevo</string>
    <string name="buttonEat">Comer</string>
    <string name="buttonSleep">Dormir</string>
    <string name="buttonTalk">Hablar</string>
    <string name="buttonAttack">Atacar</string>
    <string name="buttonRepair">Reparar</string>
    <string name="buttonInspect">Inspeccionar</string>
    <string name="buttonOthers">Others</string>
    <string name="workerHP">[Vida]</string>
    <string name="workerFat">[Fatiga]</string>
    <string name="workerHung">[Hambre]</string>
    <string name="shipPart">[Sector Nave]</string>
    <string name="shipProblem">[Problema]</string>
    <string name="shipHp">[Vida]</string>
    <string name="heal">Curar</string>
    <string name="pierce">Perforada</string>
    <string name="fire">En llamas</string>
    <string name="shock">Cortocircuito</string>
    <string name="jobChar">Trabajo</string>
    <string name="endTurnTv">Acabar turno</string>
    <string name="wounded">Herido</string>
    <string name="wNameAd">Nombre</string>


</resources>
