<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/sustituirporgif" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLog1"
            android:layout_width="207dp"
            android:layout_height="84dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logoLetras" />

        <ImageView
            android:id="@+id/ivLog2"
            android:layout_width="98dp"
            android:layout_height="96dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLog1"
            app:srcCompat="@drawable/logoImagen" />

        <TextView
            android:id="@+id/tvLog"
            android:layout_width="161dp"
            android:layout_height="54dp"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLog2" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@color/brokengrey"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLog" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/brokengrey"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:textSize="25sp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUser" />

        <Button
            android:id="@+id/btLog"
            android:layout_width="242dp"
            android:layout_height="53dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/buttonstyle"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/btLog"
            android:textColor="#ffedb2"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPass" />

        <Button
            android:id="@+id/btReg"
            android:layout_width="243dp"
            android:layout_height="51dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/buttonstyle"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/btReg"
            android:textColor="#ffedb2"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLog" />

        <ImageView
            android:id="@+id/ivLogEm"
            android:layout_width="99dp"
            android:layout_height="94dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/logoEmpresa" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>